--- a/package.json
+++ b/package.json
@@ -9,40 +9,39 @@
   "dependencies": {
     "@material/layout-grid": "^11.0.0",
     "@material/top-app-bar": "^11.0.0",
-    "@pulumi/aws": "^3.34.2",
-    "@pulumi/awsx": "^0.26.0",
-    "@pulumi/pulumi": "^2.23.2",
+    "@pulumi/aws": "^4.0.0",
+    "@pulumi/awsx": "^0.30.0",
+    "@pulumi/pulumi": "^3.0.0",
     "@topmonks/pulumi-aws": "^1.7.7",
-    "@types/node": "^14.14.36",
-    "cheerio": "^1.0.0-rc",
-    "esbuild": "^0.8.57",
+    "@types/node": "^14.14.41",
+    "cheerio": "^1.0.0-rc.6",
+    "esbuild": "^0.11.12",
     "lit-html": "^1.3.0",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
-    "@lhci/cli": "^0.7.0",
-    "@lhci/utils": "^0.7.0",
-    "@rollup/plugin-alias": "^3.1.2",
-    "@topmonks/blendid": "git://github.com/topmonks/blendid.git",
-    "@types/chart.js": "^2.9.31",
+    "@lhci/cli": "^0.7.1",
+    "@lhci/utils": "^0.7.1",
+    "@topmonks/blendid": "git://github.com/topmonks/blendid.git#commit=210b97d29bb1ff9d241de740e8a4098f3afccb40",
+    "@types/chart.js": "^2.9.32",
     "@types/yaml": "^1.9.7",
     "ava": "^3.15.0",
     "babel-eslint": "^10.1.0",
-    "chalk": "^4.0.0",
+    "chalk": "^4.1.0",
     "commander": "^7.2.0",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^4.0.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-ava": "^12.0.0",
     "eslint-plugin-lit": "^1.3.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-promise": "^5.0.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^5.1.0",
     "esm": "^3.2.25",
     "gulp-markdown-to-json": "^1.1.0",
-    "gulp-merge-json": "^2.1.0",
+    "gulp-merge-json": "^2.1.1",
     "isomorphic-fetch": "^3.0.0",
     "lighthouse": "^7.3.0",
     "lighthouse-logger": "^1.2.0",
@@ -60,15 +59,14 @@
     "lws-mime": "^2.0.0",
     "lws-range": "^3.0.0",
     "lws-request-monitor": "^2.0.0",
-    "lws-rewrite": "^3.0.1",
+    "lws-rewrite": "^3.1.1",
     "lws-spa": "^3.0.0",
     "lws-static": "^2.0.0",
-    "marked": "^2.0.0",
+    "marked": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "puppeteer": "^8.0.0",
     "rimraf": "^3.0.2",
-    "rollup-plugin-pnp-resolve": "^2.0.0",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "tap-xunit": "^2.4.1"
@@ -76,6 +74,7 @@
   "scripts": {
     "create-site": "node ./.scripts/create-site",
     "remove-site": "node ./.scripts/remove-site",
+    "outdated": "yarn upgrade-interactive",
     "build": "run-s build:*",
     "serve": "ws --http2 --compress",
     "lint:es": "eslint ./",
@@ -128,8 +127,6 @@
   },
   "resolutions": {
     "bluebird": "npm:bluebird@3.7.2",
-    "lodash": "npm:lodash@4.17.21",
-    "html-minifier": "npm:html-minifier-terser@5.1.1",
-    "source-map-resolve": "npm:source-map-resolve@0.6.0"
+    "lodash": "npm:lodash@4.17.21"
   }
 }
