Fixed run-all scripts for yarn v2

--- a/package.json
+++ b/package.json
@@ -75,11 +75,11 @@
     "create-site": "node ./.scripts/create-site",
     "remove-site": "node ./.scripts/remove-site",
     "outdated": "yarn upgrade-interactive",
-    "build": "run-s build:*",
+    "build": "run-s 'build:*'",
     "serve": "ws --http2 --compress",
     "lint:es": "eslint ./",
     "lint:scss": "stylelint-config-prettier-check",
-    "lint": "run-p lint:*",
+    "lint": "run-p 'lint:*'",
     "test:ava": "ava | tap-xunit > ./results/ava.xml",
     "test:lighthouse": "lighthouse https://localhost:8000/ --config-path=.scripts/lighthouse/config.js --output json --output html --output-path ./.lighthouseci/lh.html --chrome-flags=\"--headless\" --no-enable-error-reporting --skip-audits themed-omnibox --skip-audits redirects-http --skip-audits load-fast-enough-for-pwa --skip-audits service-worker --skip-audits splash-screen --skip-audits webapp-install-banner --skip-audits works-offline",
     "test:eslint": "eslint ./ --format junit --output-file ./results/eslint.xml",
