--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,6 +138,7 @@ jobs:
           command: |
             sudo apt-get install libnss3-tools
             mkdir -p $HOME/.pki/nssdb
+            echo "Cert path: $(yarn -s node --print "require.resolve('lws/ssl/lws-cert.pem')")"
             certutil -N -d $HOME/.pki/nssdb --empty-password
             certutil -A -d sql:$HOME/.pki/nssdb -t TC -n lws-cert -i $(yarn -s node --print "require.resolve('lws/ssl/lws-cert.pem')")
             certutil -L -d sql:$HOME/.pki/nssdb
