--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,9 +138,9 @@ jobs:
           command: |
             sudo apt-get install libnss3-tools
             mkdir -p $HOME/.pki/nssdb
-            echo "Cert path: $(yarn -s node --print "require.resolve('lws/ssl/lws-cert.pem')")"
+            echo "Cert path: $(node --print "require.resolve('lws/ssl/lws-cert.pem')")"
             certutil -N -d $HOME/.pki/nssdb --empty-password
-            certutil -A -d sql:$HOME/.pki/nssdb -t TC -n lws-cert -i $(yarn -s node --print "require.resolve('lws/ssl/lws-cert.pem')")
+            certutil -A -d sql:$HOME/.pki/nssdb -t TC -n lws-cert -i $(node --print "require.resolve('lws/ssl/lws-cert.pem')")
             certutil -L -d sql:$HOME/.pki/nssdb
       - run:
           name: Serve site content
