--- a/prodeti.topmonks.cz/config/path-config.json
+++ b/prodeti.topmonks.cz/config/path-config.json
@@ -5,6 +5,10 @@
     "src": "html",
     "dest": "./"
   },
+
+  "data": {
+    "src": "data"
+  },
   "static": {
     "src": "static",
     "dest": "./"
