New site created - Postcube.cz

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -483,3 +483,20 @@ workflows:
           filters:
             branches:
               only: trunk
+      - test_site:
+          name: test-postcube-cz
+          site_name: postcube.cz
+          context: org-global
+          requires:
+            - build
+            - deploy-lighthouse-ci
+      - deploy_site:
+          name: deploy-postcube-cz
+          site_name: postcube.cz
+          context: org-global
+          requires:
+            - provision
+            - test-postcube-cz
+          filters:
+            branches:
+              only: trunk
