--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "TopMonks",
   "license": "MIT",
   "dependencies": {
+    "@material/button": "^11.0.0",
     "@material/layout-grid": "^11.0.0",
     "@material/top-app-bar": "^11.0.0",
     "@pulumi/aws": "^4.0.0",
