--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "@material/button": "^11.0.0",
     "@material/layout-grid": "^11.0.0",
     "@material/top-app-bar": "^11.0.0",
-    "@pulumi/aws": "^4.2.0",
+    "@pulumi/aws": "^4.3.0",
     "@pulumi/awsx": "^0.30.0",
     "@pulumi/pulumi": "^3.2.1",
     "@topmonks/pulumi-aws": "^1.7.7",
     "@types/node": "^14.14.44",
-    "cheerio": "^1.0.0-rc.6",
-    "esbuild": "^0.11.12",
-    "lit-html": "^1.3.0",
+    "cheerio": "^1.0.0-rc.9",
+    "esbuild": "^0.11.20",
+    "lit-html": "^1.4.1",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
     "yaml": "^1.10.2"
@@ -25,16 +25,16 @@
   "devDependencies": {
     "@lhci/cli": "^0.7.2",
     "@lhci/utils": "^0.7.2",
-    "@topmonks/blendid": "topmonks/blendid",
+    "@topmonks/blendid": "https://github.com/topmonks/blendid.git#commit=cf98f025a94b506f734106e9925e9cbcfae39cd2",
     "@types/chart.js": "^2.9.32",
     "@types/yaml": "^1.9.7",
     "ava": "^3.15.0",
     "babel-eslint": "^10.1.0",
-    "chalk": "^4.1.0",
+    "chalk": "^4.1.1",
     "commander": "^7.2.0",
     "dotenv": "^9.0.0",
     "dotenv-cli": "^4.0.0",
-    "eslint": "^7.25.0",
+    "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-ava": "^12.0.0",
     "eslint-plugin-lit": "^1.3.0",
@@ -66,7 +66,7 @@
     "marked": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
-    "puppeteer": "^9.0.0",
+    "puppeteer": "^9.1.1",
     "rimraf": "^3.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
