--- a/prodeti.topmonks.cz/config/path-config.json
+++ b/prodeti.topmonks.cz/config/path-config.json
@@ -5,7 +5,6 @@
     "src": "html",
     "dest": "./"
   },
-
   "data": {
     "src": "data"
   },
@@ -15,7 +14,7 @@
   },
   "javascripts": {
     "src": "javascripts",
-    "dest": "javascripts"
+    "dest": "assets/js"
   },
   "stylesheets": {
     "src": "stylesheets",
@@ -36,8 +35,5 @@
   "cloudinary": {
     "src": "cloudinary",
     "dest": "prodeti.topmonks.cz"
-  },
-  "data": {
-    "src": "html/data"
   }
 }
