--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
   provision:
     executor:
       name: node/default
-      tag: '16.1.0'
+      tag: 'lts'
     working_directory: ~/topmonks-webs
     steps:
       - checkout
@@ -88,7 +88,7 @@ jobs:
       - node/install-packages:
           pkg-manager: yarn
           override-ci-command: yarn install --immutable
-          cache-version: v4
+          cache-version: v5
           cache-path: .yarn/cache
       - run: pulumi stack select topmonks-webs
       - pulumi/update:
@@ -98,7 +98,7 @@ jobs:
   preview-provision:
     executor:
       name: node/default
-      tag: '16.1.0'
+      tag: 'lts'
     working_directory: ~/topmonks-webs
     steps:
       - checkout
@@ -109,7 +109,7 @@ jobs:
       - node/install-packages:
           pkg-manager: yarn
           override-ci-command: yarn install --immutable
-          cache-version: v4
+          cache-version: v5
           cache-path: .yarn/cache
       - run: pulumi stack select topmonks-webs
       - pulumi/preview:
