--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
   build:
     executor:
       name: node/default
-      tag: '16.1.0'
+      tag: 'current'
     working_directory: ~/topmonks-webs
     steps:
       - checkout
@@ -77,7 +77,7 @@ jobs:
   provision:
     executor:
       name: node/default
-      tag: 'lts'
+      tag: 'current'
     steps:
       - checkout
       - pulumi/login:
@@ -96,7 +96,7 @@ jobs:
   preview-provision:
     executor:
       name: node/default
-      tag: 'lts'
+      tag: 'current'
     steps:
       - checkout
       - pulumi/login:
@@ -116,7 +116,7 @@ jobs:
         type: string
     executor:
       name: node/default
-      tag: '16.1.0'
+      tag: 'current'
     working_directory: ~/topmonks-webs
     steps:
       - browser-tools/install-chrome
