--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
     "outDir": "bin",
-    "target": "es2020",
+    "target": "ES2020",
     "lib": [
-      "es2020"
+      "ES2020",
+      "ES2020.Promise"
     ],
     "module": "commonjs",
     "moduleResolution": "node",
