--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
     "outDir": "bin",
     "target": "ES2020",
-    "lib": [
-      "ES2020",
-      "ES2020.Promise"
-    ],
+    "lib": ["ES2020"],
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": true,
@@ -19,7 +16,5 @@
     "forceConsistentCasingInFileNames": true,
     "strictNullChecks": true
   },
-  "files": [
-    "index.ts"
-  ]
+  "files": ["index.ts"]
 }
