--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "outDir": "bin",
-    "target": "es6",
-    "lib": ["es6"],
+    "target": "ES2020",
+    "lib": ["ES2020"],
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": true,
