--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "esbuild": "^0.11.20",
     "lit-html": "^1.4.1",
     "lodash": "^4.17.21",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "3.0.0-beta.9",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
