Debug output from Pulumi

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,9 +89,10 @@ jobs:
 #          cache-version: v5
 #          cache-path: .yarn/cache
       - run: pulumi stack select topmonks-webs
-      - pulumi/update:
-          stack: topmonks-webs
-          skip-preview: true
+      - run: pulumi update --yes --stack topmonks-webs --cwd . --skip-preview --debug -v=3 --parallel=1
+#      - pulumi/update:
+#          stack: topmonks-webs
+#          skip-preview: true
 
   preview-provision:
     executor:
