--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-eslint": "^10.1.0",
     "chalk": "^4.1.1",
     "commander": "^7.2.0",
+    "csvtojson": "^2.0.10",
     "dotenv": "^9.0.2",
     "dotenv-cli": "^4.0.0",
     "eslint": "^7.26.0",
@@ -43,6 +44,8 @@
     "esm": "^3.2.25",
     "gulp-markdown-to-json": "^1.1.0",
     "gulp-merge-json": "^2.1.1",
+    "gulp-shell": "^0.8.0",
+    "iconv-lite": "^0.6.2",
     "isomorphic-fetch": "^3.0.0",
     "lighthouse": "^7.4.0",
     "lighthouse-logger": "^1.2.0",
