--- a/postcube.cz/src/data/configurator.json
+++ b/postcube.cz/src/data/configurator.json
@@ -1,104 +1,1 @@
-{
-  "shopLink": "https://chytrybox.myshoptet.com?c=",
-  "currency": "CZK",
-  "sizes": [
-    {
-      "value": "46",
-      "label": "S",
-      "info": "50 x 50 x 50 cm",
-      "default": true,
-      "price": "5000,00"
-    },
-    {
-      "value": "49",
-      "label": "M",
-      "info": "60 x 60 x 60 cm",
-      "default": false,
-      "price": "6000,00"
-    },
-    {
-      "value": "55",
-      "label": "L",
-      "info": "70 x 70 x 70 cm",
-      "default": false,
-      "price": "7000,00"
-    }
-  ],
-  "colors": [
-    {
-      "value": "MOD",
-      "label": "Modrá"
-    },
-    {
-      "value": "SED",
-      "label": "Šedá"
-    }
-  ],
-  "accessories": [
-    {
-      "name": "Noha",
-      "options": [
-        {
-          "value": null,
-          "label": "žádná",
-          "default": true
-        },
-        {
-          "value": "30",
-          "price": "1000,00",
-          "label": "30 cm"
-        },
-        {
-          "value": "65",
-          "price": "1200,00",
-          "label": "65 cm"
-        }
-      ]
-    },
-    {
-      "name": "Stříška",
-      "options": [
-        {
-          "value": null,
-          "label": "ne",
-          "default": true
-        },
-        {
-          "value": "64",
-          "price": "800,00",
-          "label": "ano"
-        }
-      ]
-    },
-    {
-      "name": "Podstavec 80x80 cm",
-      "options": [
-        {
-          "value": null,
-          "label": "ne",
-          "default": true
-        },
-        {
-          "value": "61",
-          "price": "1000,00",
-          "label": "ano"
-        }
-      ]
-    },
-    {
-      "name": "Montáž na míru",
-      "options": [
-        {
-          "value": null,
-          "label": "ne",
-          "default": true
-        },
-        {
-          "value": "67",
-          "price": "2500,00",
-          "label": "ano"
-        }
-      ]
-    }
-  ]
-}
+{"shopLink":"https://chytrybox.myshoptet.com?c=","currency":"CZK","sizes":[{"value":"46","label":"S","info":"50 x 50 x 50 cm","default":true,"price":"5000,00"},{"value":"49","label":"M","info":"60 x 60 x 60 cm","default":false,"price":"6000,00"},{"value":"55","label":"L","info":"70 x 70 x 70 cm","default":false,"price":"7000,00"}],"colors":[{"value":"MOD","label":"Modrá"},{"value":"SED","label":"Šedá"}],"accessories":[{"name":"Noha","productId":"58","options":[{"value":null,"label":"žádná","default":true},{"value":"30","price":"1000,00","label":"30 cm"},{"value":"65","price":"1200,00","label":"65 cm"}]},{"name":"Stříška","options":[{"value":null,"label":"ne","default":true},{"value":"64","price":"800,00","label":"ano"}]},{"name":"Podstavec 80x80 cm","options":[{"value":null,"label":"ne","default":true},{"value":"61","price":"1000,00","label":"ano"}]},{"name":"Montáž na míru","options":[{"value":null,"label":"ne","default":true},{"value":"67","price":"2500,00","label":"ano"}]}]}
