[zive.tv] added stream helper Countdown

--- a/zive.tv/config/path-config.json
+++ b/zive.tv/config/path-config.json
@@ -26,6 +26,11 @@
     "dest": "assets/js"
   },
 
+  "esbuild": {
+    "src": "javascripts",
+    "dest": "assets/esm"
+  },
+
   "stylesheets": {
     "src": "stylesheets",
     "dest": "assets/css"
