--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@pulumi/aws": "^4.6.0",
     "@pulumi/awsx": "^0.30.0",
     "@pulumi/pulumi": "^3.3.1",
+    "@thi.ng/atom": "^4.1.35",
     "@topmonks/pulumi-aws": "^1.8.3",
     "@types/node": "^14.17.1",
     "cheerio": "^1.0.0-rc.9",
     "esbuild": "^0.12.5",
-    "lit-html": "^1.4.1",
+    "lit-html": "2.0.0-rc.3",
     "lodash": "^4.17.21",
     "node-fetch": "3.0.0-beta.9",
+    "parse-duration": "^1.0.0",
+    "rxjs": "^7.1.0",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
@@ -42,8 +45,10 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "esm": "^3.2.25",
+    "gulp-esbuild": "^0.8.1",
     "gulp-markdown-to-json": "^1.1.0",
     "gulp-merge-json": "^2.1.1",
+    "gulp-mode": "^1.1.0",
     "iconv-lite": "^0.6.3",
     "isomorphic-fetch": "^3.0.0",
     "lighthouse": "^7.5.0",
